added brackets, decimal point merged arrays of digits and operations to one buttons array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="minus" >-</string>
     <string name="plus">+</string>
     <string name="enter_number">enter number</string>
+    <string name="left_bracket">(</string>
+    <string name="right_bracket">)</string>
+    <string name="decimal_point">.</string>
 </resources>
